--- a/docs/css/stylesheet.css
+++ b/docs/css/stylesheet.css
@@ -1,15 +1,3 @@
-div.navigation-bar ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-div.navigation-bar ul li {
-  float: left;
-}
-
-div.navigation-bar ul li a {
-  display: block;
-  padding: 10px;
-  background-color: maroon;
+div.calendar {
+  padding: 20px 10px;
 }
